@@ -2,7 +2,7 @@ unitDef = {
 
   unitname                      = [[badvmex]],
   name                          = [[Advanced Raw Material Extractor]],
-  description                   = [[Advanced Extractor - Higher yield resource extractor that requires power to run.  Must be built over a metal desposit.]],
+  description                   = [[Higher yield resource extractor that requires power to run.  Must be built over a metal desposit.]],
   acceleration                  = 0,
   activateWhenBuilt             = true,
   bmcode                        = [[0]],
