@@ -2,7 +2,7 @@ unitDef = {
 
   unitname                      = [[badvnuclearpower]],
   name                          = [[Very High Yield Power Plant]],
-  description                   = [[Advanced Nuclear Power - Very advanced reactor that has a large explosion on destruction.  Adds +225 energy.]],
+  description                   = [[Very advanced reactor that has a large explosion on destruction.  Adds +225 energy.]],
   acceleration                  = 0,
   activateWhenBuilt             = true,
   bmcode                        = [[0]],
