@@ -2,7 +2,7 @@ unitDef = {
 
   unitname                      = [[bpowerplant]],
   name                          = [[Low Yield Power Plant]],
-  description                   = [[Power Plant - Uses heat from the sun to run a generator.  Adds +5 energy.]],
+  description                   = [[Uses heat from the sun to run a generator.  Adds +5 energy.]],
   amphibious                    = false,
   acceleration                  = 0,
   activateWhenBuilt             = true,
