@@ -2,7 +2,7 @@ unitDef = {
 
   unitname                      = [[bseamex]],
   name                          = [[Raw Material Extractor Sea Platform]],
-  description                   = [[Sea Extractor - Floating extractor of usable resources from the seafloor.  Must be built over a metal deposit.]],
+  description                   = [[Floating extractor of usable resources from the seafloor.  Must be built over a metal deposit.]],
   acceleration                  = 0,
   activateWhenBuilt             = true,
   bmcode                        = [[0]],
